<resources>
    <string name="app_name">Mercado Social</string>
    <string name="currency_name">&currency_name;</string>
    <string name="currency_name_plural">&currency_name_plural;</string>
    <string name="currency_name_abrev">&currency_name_abrev;</string>
    <string name="entities">Entidades</string>
    <string name="wallet">Monedero</string>
    <string name="profile">Perfil</string>
    <string name="favourite">Favorito</string>
    <string name="offers">Ofertas</string>
    <string name="recipient">Destinataria</string>
    <string name="calculate_bonus">Calcular bonificación</string>
    <string name="send_payment">Enviar pago</string>
    <string name="mes_send_payment">MES - Enviar pago</string>
    <string name="send_payment_next">Enviar pago ></string>
    <string name="news">Noticias</string>
    <string name="open">Abrir</string>
    <string name="start_session">Iniciar sesión</string>
    <string name="register">Registrarse</string>
    <string name="enter">Entrar</string>
    <string name="about_mes">Sobre el Mercado Social</string>
    <string name="about_boniatos">Qué son los &currency_name_plural;</string>
    <string name="map">Mapa</string>
    <string name="map_list">Mapa - Lista</string>
    <string name="the_social_market">El Mercado Social</string>
    <string name="the_boniato">El &currency_name;</string>
    <string name="how_it_works">Cómo funciona</string>
    <string name="get_boniatos">Obtener &currency_name_plural;</string>
    <string name="search">Buscar</string>
    <string name="select_with_following_buttons">Seleccionar con los siguientes botones</string>
    <string name="recipient_two_dots">Destinataria:</string>
    <string name="favourite_fem">Favorita</string>
    <string name="list">Lista</string>
    <string name="qr_code">Código QR</string>
    <string name="amount_two_dots">Importe:</string>
    <string name="calculate_bonus_two_lines">Calcular\nbonificación</string>
    <string name="focus_qr_code_entity">Enfoca al código QR de la entidad</string>
    <string name="select_recipient">Elige destinataria</string>
    <string name="persons">Personas</string>
    <string name="remember_password">Recordar\ncontraseña</string>
    <string name="repeat_password">Repetir contraseña</string>
    <string name="person">Persona</string>
    <string name="entity">Entidad</string>
    <string name="scan_qr">Escanear QR</string>
    <string name="total_amount_purchase">Importe total de la compra</string>
    <string name="boniatos_payment">Pago en &currency_name_plural;</string>
    <string name="summary_confirm_payment">Resumen / confirmación del pago</string>
    <string name="security_pin_code">Código PIN de seguridad</string>
    <string name="confirm">Confirmar</string>
    <string name="return_back">Volver</string>
    <string name="sending_payment">Enviando pago...</string>
    <string name="accepts">Acepta:</string>
    <string name="bonus_return">Bonifica:</string>
    <string name="entity_offers">Ofertas de la entidad</string>
    <string name="start">¿Comenzamos?</string>
    <string name="go_to_entities_list">¡Comenzar!</string>
    <string name="intro_member_info">Para obtener bonificaciones en &currency_name_plural; y pagar con ellos, has de ser soci@ del Mercado Social o que alguna persona socia te invite.</string>
    <string name="discover_how">Descubre cómo \></string>
    <string name="your_balance_is">Tienes un saldo de:</string>
    <string name="pending_payments_warning">Tienes %d pagos pendientes de revisión</string>
    <string name="sent_payments_warning">Te tienen que revisar %d pagos</string>
    <string name="consult_statistics">Consulta tus estadísticas de consumo y bonificaciones</string>
    <string name="graphics">Gráficas</string>
    <string name="transactions">Movimientos</string>
    <string name="operations">Operaciones</string>
    <string name="continue_arrow">Continuar \></string>
    <string name="permission_denied">Permiso denegado</string>
    <string name="need_access_camera_scan_qr">Se necesita acceder a la cámara de tu móvil para escanear el código</string>
    <string name="need_access_camera_profile_photo">Se necesita acceder a la cámara de tu móvil para hacer foto de perfil. No es necesario si vas a escoger tu imagen desde la memoria del teléfono</string>
    <string name="qr_code_scan">Escanear código QR</string>
    <string name="go_ahead">Adelante</string>
    <string name="new_payment">Nuevo pago</string>
    <string name="select_amount">Indica la cantidad</string>
    <string name="favourites">Favoritos</string>
    <string name="total_amount_label">1. Introduce el importe total de tu compra en Euros</string>
    <string name="boniatos_amount_label">2. Introduce la cantidad de &currency_name_plural; que vas a pagar (1 &currency_name;
        equivale a 1€)</string>
    <string name="enter_concept_optional">3. Introduce el concepto del pago (Opcional)</string>
    <string name="check_payment_data">Revisa los datos</string>
    <string name="payment_amount_label">Vas a pagar:</string>
    <string name="payment_recipient_label">a:</string>
    <string name="payment_bonus_is_label">Tu bonificación es:</string>
    <string name="enter_pin_code">Introduce tu código PIN</string>
    <string name="confirm_payment">Confirmar pago</string>
    <string name="euros">Euros</string>
    <string name="max_boniatos_accepted_by_entity">Máximo aceptado por la entidad: %s &currency_name_abrev;\nTu saldo: %s &currency_name_abrev;</string>
    <string name="invalid_number">El número no es válido</string>
    <string name="boniatos_amount_exceed_accepted_payment">Esta entidad acepta un máximo de %s &currency_name_plural;
        para esta compra</string>
    <string name="click_continue">Pulsa continuar</string>
    <string name="invalid_pin_code">Código PIN inválido</string>
    <string name="welcome">¡Bienvenid@!</string>
    <string name="register_to_use_wallet_text">Para usar tu monedero has de ser soci@ del Mercado Social.</string>
    <string name="welcome_name_wallet">¡Hola %s!</string>
    <string name="entity_info">Información de entidad</string>
    <string name="payment_fail">Algo ha fallado en el pago</string>
    <string name="payment_done">Pago realizado</string>
    <string name="payment_done_message">El pago a %s se ha realizado correctamente.\nEn cuanto confirme la entidad ¡recibirás tu bonificación de %s &currency_name_plural;!</string>
    <string name="email">Email</string>
    <string name="nif">NIF</string>
    <string name="name">Nombre</string>
    <string name="cif">CIF</string>
    <string name="address">Dirección</string>
    <string name="invalid_email">Email inválido</string>
    <string name="paswords_does_not_match">Las contraseñas no coinciden</string>
    <string name="select_person_or_entity">Selecciona persona o entidad</string>
    <string name="password_empty">La contraseña no puede estar vacía</string>
    <string name="exit_register">Salir del registro</string>
    <string name="exit_register_message">Si sales ahora del registro se perderán los datos introducidos hasta ahora</string>
    <string name="exit">Salir</string>
    <string name="remain">Quedarse</string>
    <string name="password_at_least_5_chars">La contraseña debe tener al menos 5 caracteres</string>
    <string name="phone_number">Número de teléfono</string>
    <string name="social_currency">Moneda social</string>
    <string name="how_much_boniatos_accept_max">Cuánto aceptas en &currency_name_plural;</string>
    <string name="bonus_percent">Porcentaje de bonificación</string>
    <string name="description_entity">Descripción de tu entidad</string>
    <string name="label_fill_info_later">Puedes completar esta información con calma más tarde. Te enviaremos un correo una vez completado el registro.</string>
    <string name="not_account_yet_register">¿No tienes cuenta?\n¡Regístrate!</string>
    <string name="already_account_login">Si ya tienes tu cuenta, entra pulsando aquí</string>
    <string name="social_balance_info_soon">En breve verás la información del balance social ;)</string>
    <string name="offer">Oferta</string>
    <string name="news_mes">Noticia del MES</string>
    <string name="cancel_payment">Cancelar pago</string>
    <string name="cancel_payment_message">Si sales se perderán los datos del pago actual. Confirma para salir</string>
    <string name="search_entities">Buscar entidades</string>
    <string name="payment_enter_user_before">Para enviar un pago debes registrar tu usuario primero</string>
    <string name="end_date_offer">Hasta: %s</string>
    <string name="mes_news">Noticia del MES</string>
    <string name="mes_news_message_format"><![CDATA[
            <b>%s</b><p>
            %s
    ]]></string>
    <string name="see_full_news">Ver noticia completa</string>
    <string name="invalid_link">El enlace no es válido</string>
    <string name="reject">Rechazar</string>
    <string name="decide_later"><![CDATA[Decidir más tarde >]]></string>
    <string name="processing">Procesando</string>
    <string name="pending_payments">Pagos pendientes</string>
    <string name="has_pending_payments_to_confirm">Tu entidad tiene pagos pendientes de confirmar</string>
    <string name="income_received">Ingreso recibido</string>
    <string name="income_received_format">Ingreso recibido: %s &currency_name_plural;</string>
    <string name="bonus_percent_entities">Bonificación para entidades</string>
    <string name="cannot_pay_yourself">¿Seguro que te quieres pagar a ti misma? ;)</string>
    <string name="no_more_pending_payments">No hay más pagos pendientes</string>
    <string name="bonus">Bonificación</string>
    <string name="balance">Saldo</string>
    <string name="date_and_time">Fecha y hora</string>
    <string name="account">Cuenta</string>
    <string name="amount">Cantidad</string>
    <string name="no_offers_right_now">Ahora mismo esta entidad no tiene ofertas activas</string>
    <string name="go_to_transactions">Ver movimientos</string>
    <string name="entity_qr">QR de tu entidad</string>
    <string name="user_not_recognized">Entidad no reconocida</string>
    <string name="entity_recognized_message">Se ha escaneado el código de la entidad %s.\n\nSi es correcto pulsa \'Continuar\' para seguir con el pago</string>
    <string name="purchase">Compra</string>
    <string name="yout_balance_is">Tu saldo es de %s &currency_name_abrev;</string>
    <string name="get_boniatos_under_construction_message">
        Esta sección estará en breve disponible.\n
        Aquí se podrán comprar &currency_name_plural; automáticamente mediante pago por tarjeta de débito o crédito.\n
        El pago y los datos de la tarjeta son totalmente seguros al implementarse a través de la pasarela Stripe\n
        De momento para la beta vamos a simular esa compra de &currency_name_plural;, simplemente escribe la cantidad que quieres recargar:
    </string>
    <string name="recharge">Recargar</string>
    <string name="amount_must_be_positive">La cantidad debe ser mayor que 0</string>
    <string name="pin_repeat">Repite PIN</string>
    <string name="pin">PIN</string>
    <string name="pin_code">Código PIN</string>
    <string name="pin_code_register_explanation">Por seguridad en cada transacción se te pedirá el código PIN que especifiques aquí.</string>
    <string name="new_payment_received">Nuevo pago recibido</string>
    <string name="password">Contraseña</string>
    <string name="username">Nombre de usuari@</string>
    <string name="surname">Apellidos</string>
    <string name="congratulations">¡Enhorabuena!</string>
    <string name="close_arrow"><![CDATA[Cerrar >]]></string>
    <string name="transactions_empty_message">Todavía no tienes movimientos en etics para mostrar.</string>
    <string name="highlighted">Destacados</string>
    <string name="no_results">Sin resultados</string>
    <string name="member_card">Carnet soci@</string>
</resources>