<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/bg_frame_black"
    android:padding="10dp"
    android:layout_marginTop="10dp">

    <TextView
        style="@style/TextBase"
        android:textStyle="bold"
        android:text="@string/pin_code"/>

    <TextView
        style="@style/TextBase"
        android:textSize="12sp"
        android:layout_marginTop="5dp"
        android:text="@string/pin_code_register_explanation"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_pin_code"
            style="@style/EditTextAuth.PinCode"
            android:hint="@string/pin"
            android:imeOptions="actionNext"/>

        <View style="@style/XpansorHoriz" />

        <EditText
            android:id="@+id/edit_pin_code_repeat"
            style="@style/EditTextAuth.PinCode"
            android:hint="@string/pin_repeat"
            android:imeOptions="actionDone"/>

    </LinearLayout>

</LinearLayout>