<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_member_card"
        android:icon="@mipmap/ic_member_card"
        app:iconTint="@color/purple"
        android:title="@string/member_card" />

    <item
        android:id="@+id/navigation_entities"
        android:icon="@mipmap/ic_entities"
        android:title="@string/entities" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@mipmap/ic_novelties"
        android:title="@string/highlighted" />

    <item
        android:id="@+id/navigation_fediverse"
        android:icon="@drawable/ic_fediverse"
        android:title="@string/fediverse"
        android:visible="false"/>

</menu>
