<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >


    <EditText
        android:id="@+id/edit_name_person"
        style="@style/EditTextAuth"
        android:hint="@string/name"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/edit_surnames_person"
        style="@style/EditTextAuth"
        android:hint="@string/surname"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/edit_nif"
        style="@style/EditTextAuth"
        android:hint="@string/nif"
        android:inputType="textCapCharacters" />

    <include
        android:id="@+id/view_pin_codes_person"
        layout="@layout/view_register_pin_code"/>

</LinearLayout>