<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context="net.mercadosocial.moneda.ui.new_payment.step1.NewPaymentStep1Fragment">


    <TextView
        style="@style/TextTitleComfortaa.Purple"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        android:text="@string/select_recipient" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_tab"
            android:gravity="center"
            android:text="@string/favourites" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:background="@color/tab_selected"
            android:gravity="center"
            android:text="@string/entities" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:background="@drawable/bg_tab"
            android:gravity="center"
            android:text="@string/persons" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_search_recipients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_edittext"
            android:hint="@string/search"
            android:inputType="textFilter"
            android:lines="1"
            android:imeOptions="actionSearch"
            android:padding="7dp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_search_recipients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_pressed_common"
            android:padding="3dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:src="@mipmap/ic_search" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_recipients"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_90"
            android:padding="5dp" />

        <ProgressBar
            android:id="@+id/progress_recipients"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true" />

        <TextView
            android:id="@+id/tv_no_results"
            style="@style/TextBase.Purple"
            android:text="@string/no_results"
            android:layout_centerInParent="true"
            android:visibility="gone"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/btn_continue"
        style="@style/ButtonMes.Green"
        android:layout_margin="10dp"
        android:text="@string/continue_arrow" />

</androidx.appcompat.widget.LinearLayoutCompat>
