<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_light">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="40dp"
        tools:context="net.mercadosocial.moneda.ui.auth.login.LoginActivity">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@mipmap/img_mes_header"/>

        <EditText
            style="@style/TextBase"
            android:layout_width="match_parent"
            android:hint="@string/username"
            android:inputType="textAutoComplete"
            android:layout_marginTop="20dp"/>


        <EditText
            style="@style/TextBase"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            style="@style/TextBase"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_button_purple"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/enter"
            android:textColor="@color/green"
            android:textSize="20sp" />

        <TextView
            style="@style/TextBase"
            android:layout_gravity="right"
            android:layout_marginTop="30dp"
            android:text="@string/remember_password" />

    </LinearLayout>
</RelativeLayout>