<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/bg_custom_dialog">


    <TextView
        style="@style/TextTitleComfortaa.Purple"
        android:text="@string/congratulations"/>


    <TextView
        android:id="@+id/tv_bonus_message"
        style="@style/TextBase"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_go_to_transactions"
        style="@style/ButtonMes.Green"
        android:text="@string/go_to_transactions"
        android:layout_marginTop="30dp"
        android:textSize="@dimen/text_medium"
        android:textStyle="normal"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/btn_close"
        style="@style/TextBase"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/close_arrow"
        android:background="@drawable/background_pressed_common"/>

</LinearLayout>