<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green_gradient"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            style="@style/TextTransactionsHeader"
            android:gravity="center_horizontal"
            android:text="@string/date_and_time" />

        <TextView
            style="@style/TextTransactionsHeader"
            android:layout_width="0dp"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/account" />

        <TextView
            style="@style/TextTransactionsHeader"
            android:layout_marginRight="15dp"
            android:text="@string/amount" />

        <TextView
            style="@style/TextTransactionsHeader"
            android:text="@string/balance" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.malinskiy.superrecyclerview.SuperRecyclerView
            android:id="@+id/recycler_transactions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_moreProgress="@layout/view_more_progress"
            app:mainLayoutId="@layout/layout_recyclerview_verticalscroll" />

        <LinearLayout
            android:id="@+id/view_empty_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:padding="20dp"
            android:orientation="vertical"
            android:visibility="gone">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@mipmap/ic_intro_4" />

            <TextView
                style="@style/TextBase.Purple"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/transactions_empty_message" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
