<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_username"
            style="@style/EditTextAuth"
            android:hint="@string/username"
            android:inputType="textAutoComplete"/>

        <ImageView
            android:id="@+id/btn_info_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@mipmap/ic_info"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/edit_username"
            android:layout_alignBottom="@+id/edit_username"
            android:padding="8dp"
            android:background="@drawable/background_pressed_common"/>
    </RelativeLayout>

    <EditText
        android:id="@+id/edit_email"
        style="@style/EditTextAuth"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
        android:id="@+id/edit_password"
        style="@style/EditTextAuth"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
        android:id="@+id/edit_repeat_password"
        style="@style/EditTextAuth"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:hint="@string/repeat_password"
        android:inputType="textPassword" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/btn_register_person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bg_button_green_selectable"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@mipmap/ic_persons"
                android:tint="@color/purple" />

            <TextView
                style="@style/TextBase"
                android:text="@string/person"
                android:textColor="@color/purple"
                android:textSize="@dimen/text_medium"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_register_entity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="40dp"
            android:background="@drawable/bg_button_green_selectable"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@mipmap/ic_entities"
                android:tint="@color/purple" />

            <TextView
                style="@style/TextBase"
                android:text="@string/entity"
                android:textColor="@color/purple"
                android:textSize="@dimen/text_medium"
                android:layout_marginTop="5dp" />

        </LinearLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/btn_go_to_login"
        style="@style/TextBase"
        android:padding="8dp"
        android:gravity="center_horizontal"
        android:text="@string/already_account_login"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:textSize="@dimen/text_small_2"
        android:background="@drawable/background_pressed_common" />
</LinearLayout>