<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_custom_dialog"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp">


    <TextView
        style="@style/TextTitleComfortaa.Purple"
        android:text="@string/new_payment_received" />


    <TextView
        android:id="@+id/tv_new_payment_info"
        style="@style/TextBase"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_payment_cancel"
            style="@style/ButtonMes.Green"
            android:minWidth="70dp"
            android:text="@string/reject"
            android:textAllCaps="false"
            android:textSize="@dimen/text_medium"
            android:textStyle="normal"
            android:background="@drawable/bg_button_purple_outline" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_payment_accept"
            style="@style/ButtonMes"
            android:layout_marginLeft="50dp"
            android:minWidth="70dp"
            android:text="@string/accept"
            android:textAllCaps="false"
            android:textSize="@dimen/text_medium"
            android:textStyle="normal" />
    </LinearLayout>


    <TextView
        android:id="@+id/btn_decide_later"
        style="@style/TextBase"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_pressed_common"
        android:padding="10dp"
        android:text="@string/decide_later" />


</LinearLayout>